--- a/test/test1.html
+++ b/test/test1.html
@@ -8,6 +8,7 @@
     <h1>hello!</h1>
     <p>Press F5 in dev tools window to repeat all tests</p>
     <button id="btn-clickme">click me</button>
+    <button id="btn-continue">continue</button>
     <div id="result"></div>
     <script type="text/javascript">
       $('#btn-clickme').on('click', function () {
